--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -54,7 +54,7 @@
 
       <div class="bground">
         <div class="content">
-          <span class="close"></span>
+          <span id="modal-close-btn" class="close"></span>
           <div class="modal-body">
             <form
               name="reserve"
