--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -63,7 +63,10 @@
               onsubmit="return validate();"
             >
               <div
-                class="formData">
+                class="formData"
+                data-error="Veuillez entrer 2 caractères ou plus pour le champ du prénom."
+                data-error-visible="false"
+              >
                 <label for="first">Prénom</label><br>
                 <input
                   class="text-control"
@@ -73,7 +76,10 @@
                 /><br>
               </div>
               <div
-                class="formData">
+                class="formData"
+                data-error="Veuillez entrer 2 caractères ou plus pour le champ du nom."
+                data-error-visible="false"
+              >
                 <label for="last">Nom</label><br>
                 <input
                   class="text-control"
@@ -83,7 +89,10 @@
                 /><br>
               </div>
               <div
-                class="formData">
+                class="formData"
+                data-error="Vous devez entrer une adresse électronique valide."
+                data-error-visible="false"
+              >
                 <label for="email">E-mail</label><br>
                 <input
                   class="text-control"
@@ -93,7 +102,10 @@
                 /><br>
               </div>
               <div
-                class="formData">
+                class="formData"
+                data-error="Vous devez entrer une date de naissance valide."
+                data-error-visible="false"
+              >
                 <label for="birthdate">Date de naissance</label><br>
                 <input
                   class="text-control"
@@ -103,13 +115,19 @@
                 /><br>
               </div>
               <div
-                class="formData">
+                class="formData"
+                data-error="Vous devez entrer un nombre valide."
+                data-error-visible="false"
+              >
                 <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
                 <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
               </div>
               <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
               <div
-                class="formData">
+                class="formData"
+                data-error="Vous devez choisir une option."
+                data-error-visible="false"
+              >
                 <input
                   class="checkbox-input"
                   type="radio"
@@ -179,7 +197,10 @@
               </div>
 
               <div
-                class="formData">
+                class="formData"
+                data-error="Vous devez choisir une option."
+                data-error-visible="false"
+              >
                 <input
                   class="checkbox-input"
                   type="checkbox"
@@ -191,7 +212,7 @@
                   J'ai lu et accepté les conditions d'utilisation.
                 </label>
                 <br>
-                <input class="checkbox-input" type="checkbox" id="checkbox2" name="news" />
+                <input class="checkbox-input optional" type="checkbox" id="checkbox2" name="news" />
                 <label class="checkbox2-label" for="checkbox2">
                   <span class="checkbox-icon"></span>
                   Je Je souhaite être prévenu des prochains évènements.
