Issue #4: Ajouter confirmation quand envoi réussi

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -54,8 +54,8 @@
 
       <div class="bground">
         <div class="content">
-          <span id="modal-close-btn" class="close"></span>
-          <div class="modal-body">
+          <span class="btn-close close"></span>
+          <div id="reserve-form" class="modal-body">
             <form
               name="reserve"
               action="index.html"
@@ -226,6 +226,14 @@
                 value="C'est parti"
               />
             </form>
+          </div>
+          <div id="reserve-success" class="modal-body modal-centered hide">
+            <h2 class="centered-title">Merci pour votre inscription</h2>
+            <input
+              type="submit"
+              class="button btn-close"
+              value="Fermer"
+            />
           </div>
         </div>
       </div>
