Fix: Reset du formulaire après soumission valide

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -231,6 +231,7 @@
               type="submit"
               class="button btn-close"
               value="Fermer"
+              onclick="resetReservedForm();"
             />
           </div>
         </div>
